# gamepower-wallet-template

./: .gitignore  Dockerfile  README.md  customSpec.json  customSpecRaw.json  docker-compose.yml  types.json
.github/workflows/: build-push-template.yml
docs/: testing-guide.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
